--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="tvProvento">R$ 0,00</string>
     <string name="tvDescontos">R$ 0,00</string>
     <string name="tvSalario">R$ 0,00</string>
+    <string name="btok">Calcular</string>
+    <string name="btlimpar">Limpar</string>
 
 </resources>
